--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vue2-transitions": "^0.3.0",
+    "vuedraggable": "^2.24.0",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
