--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "scrollmonitor": "^1.2.4",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
+    "vue-cookies": "^1.7.3",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vue2-transitions": "^0.3.0",
